--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "pictures-map",
+  "description": "A web application that makes it easy to view photos on a leaflet map",
+  "authors": "Andrei Jurca",
+  "version": "1.0.0",
+  "main": "pathToMain",
+  "scripts": {"start": "node server.js"},
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
@@ -6,3 +12,4 @@
     "nodemon": "^2.0.19"
   }
 }
+
