--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "authors": "Andrei Jurca",
   "version": "1.0.0",
   "main": "pathToMain",
-  "scripts": {"start": "node server.js"},
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
@@ -12,4 +14,3 @@
     "nodemon": "^2.0.19"
   }
 }
-
