--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cloudinary": "^1.30.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "leaflet-rotatedmarker": "^0.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "pg": "^8.7.3"
